appId: com.buildtrack.app.local
---
- launchApp:
    clearState: false
- openLink:
    link: "exp+buildtrack://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081"
- runFlow:
    when:
      visible: "http://localhost:8081"
    commands:
      - tapOn: "http://localhost:8081"
- runFlow:
    when:
      visible: 'Open in “Taskr”?'
    commands:
      - tapOn: "Open"
- runFlow:
    when:
      visible:
        id: "login-submit"
    commands:
      - tapOn:
          id: "login-emailOrPhone"
      - inputText: "alice.workera1@test.com"
      - tapOn:
          id: "login-password"
      - inputText: "password123"
      - tapOn:
          id: "login-submit"
- assertVisible:
    id: "dashboard-screen__root"
